--- a/package.json
+++ b/package.json
@@ -7,15 +7,22 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
+    "path": "^0.12.7",
+    "patternomaly": "^1.3.2",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-meta": "^2.2.1",
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-plugin-pwa": "^3.10.0",
     "@vue/cli-service": "^3.10.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
